--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,8 @@ a {
     padding-right: 20px;
 }
 #top{
-    display: inline-block;
+    display: block;
+    clear: both;
 }
 a:link,
 a:visited { color: #265C83; }
