--- a/Touch/stylesheet.css
+++ b/Touch/stylesheet.css
@@ -3,3 +3,9 @@
 html, body, div { width:100%; height:100%; } /* just to be sure these are full screen*/
 
 canvas{ display:block; overflow: hidden;} /* To remove the scrollbars */
+p {
+    color: black;
+    width: 0;
+    float: left;
+    font-size: 14px;
+}
