--- a/Touch/stylesheet.css
+++ b/Touch/stylesheet.css
@@ -1,11 +1,15 @@
-* { margin:0; padding:0; } /* to remove the top and left whitespace */
+* { margin:0px auto; padding:0; } /* to remove the top and left whitespace */
 
 html, body, div { width:100%; height:100%; } /* just to be sure these are full screen*/
 
-canvas{ display:block; overflow: hidden;} /* To remove the scrollbars */
+canvas{ 
+    display:block;                 
+    border: 2px groove;
+} /* To remove the scrollbars */
 p {
     color: black;
-    width: 0;
+    width: 0px;
+    height: 0px;
     float: left;
     font-size: 14px;
 }
